[package]
name = "bff"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo="0.30.7"
clap = { version = "4.1.11", features = ["derive"] }
flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
serde_json = "1.0"
unicode-segmentation = "1.7"
rand = "0.8.4"
ahash = { version = "0.8.1", features = ["runtime-rng"] }
byteorder = "1"
threadpool = "1.8.1"
human_bytes = "0.4.3"
indicatif = "0.17.8"
glob = "0.3.1"
anyhow = "1.0.80"
tokio = { version = "1.36.0", features = ["full"] }
aws-config = "1.1.8"
aws-sdk-s3 = "1.19.1"
async-compression = {version ="0.4.6", features=["all"]}
rayon = "1.10.0"
zstd = "0.13.1"
