[package]
name = "tokshuf-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde_json = "1.0.97"
aws-config = "1.1.8"
aws-sdk-s3 = "1.19.1"
tokio = { version = "1.36.0", features = ["full"] }
async-compression = {version ="0.4.6", features=["all"]}
zstd = "0.13.1"
glob = "0.3.1"
rand = "0.8"
threadpool = "1.8.1"
clap = { version = "4.1.11", features = ["derive"] }
tokenizers = "=0.13.4"
bincode = "1.3.3"
tar = "0.4.40"
uuid = {version ="1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
indicatif = "0.17.8"
flate2 = "1.0"
serde = "1.0.198"
tiktoken-rs = "0.5.8"
base64 = "0.22.1"
rustc-hash = "1.1.0"

